# p2p-file-transfer

./: README.md  sample.txt
.github/workflows/: ci.yml
p2p-app/: Cargo.toml  Rocket.toml
p2p-app/assets/static/: index.js
p2p-app/src/: main.rs
p2p-app/templates/: index.html.hbs
