[package]
name = "p2p-app"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "*", features = ['handlebars', 'tera']}
serde = { version = "1.0", features = ["derive"] }
uuid ={ version = "1.17.0", features = ["v4"] }
nanoid = "=0.4.0"
http = "1.3.1"
